--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+#重试次数
+curator.retryCount=5
+#重试间隔时间
+curator.elasedTimeMs=5000
+#Zookeeper Address
+curator.connectString=127.0.0.1:2181
+#session超时时间
+curator.sessionTimeoutMs=60000
+#连接超时时间
+curator.connectionTimeoutMs=5000
